# LMC_Machine_Learning

./: .gitignore  LMC.bib  LMC_ML.tex  pyproject.toml
code/: 1E4_Random_Selected.py  Anomaly_IQR_Show.py  Extract_Labeled_PS.py  Pair_Xmatching.py
data/: 1000_All_SAGE_and_Gaia_and_VISTA.xlsm  1E2_SAGE_Final.csv  Labeled_SAGE_Final.csv  Random_500_SAGE_Final.csv
docs/: Illustris_API_Test.ipynb  Paper_Links.txt  Untitled0.ipynb
src/lmc_machine_learning/: test_model.ipynb
