[project]
authors = [{name = "Peter Scicluna", email = "pscicluna@users.noreply.github.com"}]
dependencies = []
description = "Add a short description here"
name = "LMC_Machine_Learning"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
lmc_machine_learning = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.0,<3.14"
